# km-agents-foundry-scenario

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  azure.yaml  pyproject.toml  request-error-details.md  requirements.txt
.azure/: deployment-plan.md
agents/prompt/case-study-generator/: agent.yaml  instructions.md
agents/prompt/orchestrator/: agent.yaml  instructions.md
assets/brand/: tokens.json
docs/: agent-testing.md  brand-guidelines.md  cleanup.md  evaluation.md  m365-copilot.md  setup.md  validation.md  work-iq.md
infra/: main.bicep  main.parameters.json
m365-copilot/: declarative-agent.template.json  openapi.template.yaml
m365-copilot/hosted/: declarative-agent.json  openapi.yaml
m365-copilot/prompt/: declarative-agent.json  openapi.yaml
scripts/: deploy_hosted_sdk.py  export-public-ip.ps1  extract_brand_guidelines.py  generate_synthetic_assets.py  provision_prompt_agents.py  report_evaluation.py  run_hosted_local_corpus.py  validate.ps1
src/: .agentignore  .azdignore  main.py  requirements.txt
src/km_agents/: __init__.py  a2a.py  artifacts.py  config.py  contracts.py  evaluation.py  grounding.py  identity.py  safety.py  workiq.py
src/km_agents/agents/: __init__.py
src/km_portal/: __init__.py  authentication.py  gateway.py  graph.py  main.py  uploads.py
tests/: test_agent_definitions.py  test_brand_guidelines_extraction.py  test_config.py  test_evaluation_corpus.py  test_evaluation_reporting.py  test_gateway.py  test_hosted_agents.py  test_hosted_operations.py  test_identity.py  test_infra_static.py  test_portal_contract.py  test_portal_security.py  test_pptx_skill.py  test_prompt_provisioning.py  test_safety.py  test_uploads.py
(+29 files in other folders)
