[project]
name = "km-agents-foundry-scenario"
version = "0.1.0"
description = "Microsoft Foundry multi-agent case-study generation scenario for KM portal and Microsoft 365 Copilot."
requires-python = ">=3.11"
dependencies = [
  "agent-framework>=1.0.0b251001",
  "azure-ai-projects>=2.2.0",
  "azure-identity>=1.17.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "python-pptx>=1.0.2",
  "pyyaml>=6.0.2",
  "pydantic>=2.7.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
assets = [
  "openpyxl>=3.1.5",
  "python-docx>=1.2.0",
  "reportlab>=4.4.0"
]
dev = []

[project.scripts]
km-generate-template = "km_agents.pptx_skill.template:main"

[tool.setuptools.packages.find]
where = ["src"]
