[project]
name = "km-agents-foundry-scenario"
version = "0.1.0"
description = "Microsoft Foundry multi-agent case-study generation scenario with an Entra-authenticated upload portal."
requires-python = ">=3.11"
dependencies = [
  "agent-framework>=1.0.0b251001",
  "agent-framework-foundry",
  "agent-framework-foundry-hosting>=1.0.0a260630",
  "azure-ai-projects>=2.2.0",
  "azure-identity>=1.17.0",
  "azure-storage-blob>=12.27.0",
  "fastapi>=0.111.0",
  "openpyxl>=3.1.5",
  "pypdf>=5.0.0",
  "PyJWT[crypto]>=2.10.1",
  "python-multipart>=0.0.20",
  "python-docx>=1.2.0",
  "python-pptx>=1.0.2",
  "pyyaml>=6.0.2",
  "pydantic>=2.7.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
assets = ["reportlab>=4.4.0"]
dev = []

[project.scripts]
km-generate-template = "km_agents.pptx_skill.template:main"

[tool.setuptools.packages.find]
where = ["src"]
